refactor: change method name
Also, added some comments.

--- a/app/templates/components/event-table.hbs
+++ b/app/templates/components/event-table.hbs
@@ -3,7 +3,7 @@
     <p>
       This column could contain filters, for example
     </p>
-    <button {{action "toggleBody"}} class="btn btn-success btn-lg" > <span class="glyphicon glyphicon-refresh"></span>Refresh events</button>
+    <button {{action "refresh"}} class="btn btn-success btn-lg" > <span class="glyphicon glyphicon-refresh"></span>Refresh events</button>
   </div>
   <div class="col-md-9">
     {{#each events as | eventEntry|}}
